[package]
name = "theta"
version = "0.1.0"
authors = ["michael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"
rusqlite = "0.23.1"
# crossterm = "0.17"
# tui = { version = "0.10", default-features = false, features = ['crossterm'] }